final commit- fixed instagram and order section gap issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -244,7 +244,7 @@ body {
 }
 
 .instagram-images img {
-    width: 250px;
+    width: 290px;
 }
 
 
@@ -258,7 +258,7 @@ body {
     align-items: center;
     border-radius: 8px;
     background: rgba(229, 84, 115, 0.05);
-    padding: 100px 20px;
+    padding: 100px 50px;
     text-align: center;
 }
 
